--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-#logging.file.name=d:/XJPFile/crawler.log
+logging.file.name=d:/XJPFile/crawler.log
+logging.pattern.console=%d - [%thread] - %-5level %logger{50} -%msg%n
+logging.pattern.file=%d - [%thread] - %-5level %logger{50} -%msg%n
+spring.thymeleaf.cache=false
